// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterPopover component does not show item list when loading 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <UptimeFilterButton
      isSelected={true}
      numActiveFilters={2}
      numFilters={4}
      onClick={[Function]}
      title="bar"
    />
  }
  closePopover={[Function]}
  data-test-subj="filter-popover_test"
  display="inlineBlock"
  hasArrow={true}
  id="test"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
  withTitle={true}
  zIndex={10000}
>
  <EuiPopoverTitle>
    <EuiFieldSearch
      compressed={false}
      disabled={false}
      fullWidth={false}
      incremental={true}
      isClearable={true}
      isLoading={false}
      onSearch={[Function]}
      placeholder="Loading..."
    />
  </EuiPopoverTitle>
</EuiPopover>
`;

exports[`FilterPopover component renders without errors for valid props 1`] = `
<EuiPopover
  anchorPosition="downCenter"
  button={
    <UptimeFilterButton
      isSelected={true}
      numActiveFilters={2}
      numFilters={4}
      onClick={[Function]}
      title="bar"
    />
  }
  closePopover={[Function]}
  data-test-subj="filter-popover_test"
  display="inlineBlock"
  hasArrow={true}
  id="test"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
  withTitle={true}
  zIndex={10000}
>
  <EuiPopoverTitle>
    <EuiFieldSearch
      compressed={false}
      disabled={false}
      fullWidth={false}
      incremental={true}
      isClearable={true}
      isLoading={false}
      onSearch={[Function]}
      placeholder="Search bar"
    />
  </EuiPopoverTitle>
  <EuiFilterSelectItem
    checked="on"
    data-test-subj="filter-popover-item_first"
    key="first"
    onClick={[Function]}
    showIcons={true}
  >
    first
  </EuiFilterSelectItem>
  <EuiFilterSelectItem
    data-test-subj="filter-popover-item_second"
    key="second"
    onClick={[Function]}
    showIcons={true}
  >
    second
  </EuiFilterSelectItem>
  <EuiFilterSelectItem
    checked="on"
    data-test-subj="filter-popover-item_third"
    key="third"
    onClick={[Function]}
    showIcons={true}
  >
    third
  </EuiFilterSelectItem>
  <EuiFilterSelectItem
    data-test-subj="filter-popover-item_fourth"
    key="fourth"
    onClick={[Function]}
    showIcons={true}
  >
    fourth
  </EuiFilterSelectItem>
</EuiPopover>
`;

exports[`FilterPopover component selects a new item 2`] = `
<div
  intl="[object Object]"
>
  <div
    id="foo"
  >
    Some text
  </div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover--withTitle"
    data-test-subj="filter-popover_test"
    id="test"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-hasNotification euiFilterButton--hasIcon"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <div
            aria-hidden="true"
            class="euiButtonEmpty__icon"
            data-euiicon-type="arrowDown"
          />
          <span
            class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
          >
            <span
              class="euiFilterButton__textShift"
              data-text="bar"
              title="bar"
            >
              bar
            </span>
            <span
              aria-label="2 active filters"
              class="euiNotificationBadge euiNotificationBadge--medium euiFilterButton__notification"
            >
              2
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
